--- a/.github/actions/build-directory/main.yaml
+++ b/.github/actions/build-directory/main.yaml
@@ -37,7 +37,11 @@ inputs:
 outputs:
 
   distribution: ${{ steps.set-output.outputs.distribution }}
+  build_type: ${{ steps.set-output.outputs.build_type }}
   build_version: ${{ steps.set-output.outputs.build_version }}
+  build_version_override: ${{ steps.set-output.outputs.build_version_override }}
+  build_tag: ${{ steps.set-output.outputs.build_tag }}
+  build_ref: ${{ steps.set-output.outputs.build_ref }}
 
 runs:
   using: "composite"
@@ -192,6 +196,7 @@ runs:
         echo -n "build_ref=$build_ref"         >> "$GITHUB_OUTPUT"
 
         echo "Set distribution='$distribution'."
+        echo "Set build_type='$build_type'."
         echo "Set build_version='$build_version'."
         echo "Set build_version_override='$build_version_override'."
         echo "Set build_tag='$build_tag'."
