--- a/.github/actions/build-directory/action.yaml
+++ b/.github/actions/build-directory/action.yaml
@@ -8,40 +8,46 @@ inputs:
     description: Build version override
     required: true
     default: ""
-    type: string
 
   build_directory:
     description: Directory to build
     required: false
     default: .
-    type: string
 
   build_version:
     description: Build version
     required: false
     default: dry-run
-    type: string
 
   build_version_override:
     description: Build version override
     required: false
     default: ""
-    type: string
 
   build_type:
     description: Build version override
     required: false
     default: "dry-run"
-    type: string
 
 outputs:
-
-  distribution: ${{ steps.set-output.outputs.distribution }}
-  build_type: ${{ steps.set-output.outputs.build_type }}
-  build_version: ${{ steps.set-output.outputs.build_version }}
-  build_version_override: ${{ steps.set-output.outputs.build_version_override }}
-  build_tag: ${{ steps.set-output.outputs.build_tag }}
-  build_ref: ${{ steps.set-output.outputs.build_ref }}
+  distribution:
+    description: Distribution file
+    value: ${{ steps.set-output.outputs.distribution }}
+  build_type:
+    description: Build type
+    value: ${{ steps.set-output.outputs.build_type }}
+  build_version:
+    description: Build version
+    value: ${{ steps.set-output.outputs.build_version }}
+  build_version_override:
+    description: Build version override
+    value: ${{ steps.set-output.outputs.build_version_override }}
+  build_tag:
+    description: Build tag
+    value: ${{ steps.set-output.outputs.build_tag }}
+  build_ref:
+    description: Build ref
+    value: ${{ steps.set-output.outputs.build_ref }}
 
 runs:
   using: "composite"
