--- a/.github/actions/build-directory/action.yaml
+++ b/.github/actions/build-directory/action.yaml
@@ -82,7 +82,7 @@ runs:
 
         fi
 
-        if [[ ! "$build_tag" !~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] ; then 
+        if [[ ! "$build_tag" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] ; then 
 
           echo "Invalid build_tag format: '$build_tag'. Aborting."
           exit 1
