--- a/.github/actions/build-directory/action.yaml
+++ b/.github/actions/build-directory/action.yaml
@@ -104,7 +104,7 @@ runs:
 
         fi
 
-        echo "Found valid build version '$build_version'.""
+        echo "Found valid build version '$build_version'."
         echo "build_version=$build_version" >> "$GITHUB_ENV"
 
     # Setup build environment
