--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -163,7 +163,9 @@ jobs:
         id: set-output
         shell: bash
         run: |
-          echo "XXX '${{ steps.build.outputs.distribution }}'"
+          echo "XXX 1 '${{ steps.build.outputs.distribution }}'"
+          echo "XXX 2 '${{ steps.build.outputs.build_type }}'"
+          echo "XXX 3 '${{ steps.build.outputs.build_ref }}'"
           echo -n "distribution=$distribution"   >> "$GITHUB_OUTPUT"
           echo -n "build_type=$build_type"       >> "$GITHUB_OUTPUT"
           echo -n "build_version=$build_version" >> "$GITHUB_OUTPUT"
