--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -127,9 +127,9 @@ jobs:
       - name: Checkout
         id: checkout
         uses: ./.github/actions/checkout-tag
-        with:
-          build_directory: .
-          build_tag: ${{ env.build_tag }}
+        # with:
+        #   build_directory: .
+        #   build_tag: ${{ env.build_tag }}
 
       - name: Setup Environment from checkout
         id: setup-environment-from-checkout
