--- a/.github/actions/checkout-tag/action.yaml
+++ b/.github/actions/checkout-tag/action.yaml
@@ -2,31 +2,32 @@ name: 'Checkout TAG'
 
 description: 'Checkout tag and set build_type'
 
-inputs:
+# inputs:
 
-  build_tag:
-    description: Build version override
-    required: true
-    default: ""
+#   build_tag:
+#     description: Build version override
+#     required: true
+#     default: ""
 
-  build_directory:
-    description: Directory to build
-    required: false
-    default: .
+#   build_directory:
+#     description: Directory to build
+#     required: false
+#     default: .
 
-outputs:
+# outputs:
 
-  build_type:
-    description: Build type
-    value: ${{ steps.set-output.outputs.build_type }}
+#   build_type:
+#     description: Build type
+#     value: ${{ steps.set-output.outputs.build_type }}
 
-  build_tag:
-    description: Build tag
-    value: ${{ steps.set-output.outputs.build_tag }}
+#   build_tag:
+#     description: Build tag
+#     value: ${{ steps.set-output.outputs.build_tag }}
 
-  build_version:
-    description: Build version
-    value: ${{ steps.set-output.outputs.build_version }}
+#   build_version:
+#     description: Build version
+#     value: ${{ steps.set-output.outputs.build_version }}
+
 runs:
 
   using: "composite"
@@ -37,8 +38,9 @@ runs:
       id: setup-environment
       shell: bash
       run: |
-        echo "build_tag=${{inputs.build_tag}}" >> "$GITHUB_ENV"
-        echo "build_directory=${{inputs.build_directory}}" >> "$GITHUB_ENV"
+        echo "XXX"
+        # echo "build_tag=${{inputs.build_tag}}" >> "$GITHUB_ENV"
+        # echo "build_directory=${{inputs.build_directory}}" >> "$GITHUB_ENV"
 
     # - name: Check for valid tag
     #   id: check-valid-tag
