--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,8 @@ jobs:
         shell: bash
         run: |
           pwd
-          find . -path '*checkout-tag*' -ls
+          find .github -ls
+          git branch -a -v -v 
 
       # - name: Checkout TAG
       #   id: checkout-tag
