--- a/.github/actions/checkout-tag/action.yaml
+++ b/.github/actions/checkout-tag/action.yaml
@@ -101,12 +101,41 @@ runs:
         echo "build_type=$build_type" >> "$GITHUB_ENV"
         echo "build_tag=" >> "$GITHUB_ENV"
 
+
+    - name: Set build_tag from branch
+      id: set-build-tag
+      if: env.build_type == 'dry-run'
+      shell: bash
+      run: |
+        set +e
+        build_tag=$( git tag --merged | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V | tail -1 )
+        set -e
+
+        if [[ -z "$build_tag" ]] ; then 
+
+          echo "No build_tag found in current branch, checking full repo."
+          set +e
+          build_tag=$( git tag --list 'v*' | grep -v "^v[0-9]+\.[0-9]+\.[0-9]+$" | sort -V | tail -1 )
+          set -e
+
+        fi
+
+        if [[ -z "$build_tag" ]] ; then 
+
+          build_tag="v0.0.1"
+          echo "No build_tag found in repo, using '$build_tag' as initial tag."
+
+        fi
+        echo "Setting build_tag to '$build_tag'."
+        echo "build_tag=$build_tag" >> "$GITHUB_ENV"
+
+
     - name: Set build_version from build_tag
       id: set-build-version
       shell: bash
       run: |
         build_version=$( echo "$build_tag" | sed -n "s/^v*\([0-9]*\.[0-9]*\.[0-9]*\(\.[0-9.]*\)*\)/\1/p" )
-        echo "Setting build_version to '$build_version'."
+        echo "Setting build_version to '$build_version' from build_tag '$build_tag'."
         echo "build_version=$build_version" >> "$GITHUB_ENV"
 
     - name: Set output
