--- a/.github/actions/checkout-tag/action.yaml
+++ b/.github/actions/checkout-tag/action.yaml
@@ -133,7 +133,7 @@ runs:
       id: set-build-version
       shell: bash
       run: |
-        build_version=$( echo "$build_tag" | sed -n "s/^v*\([0-9]*\.[0-9]*\.[0-9]*\(\.[0-9.]*\)*\)/\1/p" )
+        build_version=$( echo "$build_tag" | sed -n "s/^v*\([0-9]*\.[0-9]*\.[0-9]*$\)/\1/p" )
 
         if [[ "$build_type" == 'dry-run' ]] ; then
 
@@ -144,7 +144,7 @@ runs:
           if [[ -z "$count" ]] ; then count=0 ; fi
 
           build_version="$build_version.$count"
-          
+
         fi
 
         echo "Setting build_version to '$build_version' from build_tag '$build_tag'."
