--- a/.github/actions/checkout-tag/action.yaml
+++ b/.github/actions/checkout-tag/action.yaml
@@ -28,6 +28,14 @@ outputs:
     description: Build version
     value: ${{ steps.set-output.outputs.build_version }}
 
+  build_ref:
+    description: Build ref
+    value: ${{ steps.set-output.outputs.build_ref }}
+
+  build_stamp:
+    description: Build stamp
+    value: ${{ steps.set-output.outputs.build_stamp }}
+
 runs:
 
   using: "composite"
@@ -38,15 +46,16 @@ runs:
       id: setup-environment
       shell: bash
       run: |
+        build_stamp=$( date +%Y%m%d%H%M%S )
         echo "build_tag=${{inputs.build_tag}}" >> "$GITHUB_ENV"
         echo "build_directory=${{inputs.build_directory}}" >> "$GITHUB_ENV"
+        echo "build_stamp=${{inputs.build_stamp}}" >> "$GITHUB_ENV"
 
     - name: Check for valid tag
       id: check-valid-tag
       if: env.build_tag != 'dry-run'
       shell: bash
       run: |
-
         if [[ ! "$build_tag" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]] ; then 
 
           echo "Invalid build_tag format: '$build_tag'. Aborting."
@@ -101,7 +110,6 @@ runs:
         echo "build_type=$build_type" >> "$GITHUB_ENV"
         echo "build_tag=" >> "$GITHUB_ENV"
 
-
     - name: Set build_tag from branch
       id: set-build-tag
       if: env.build_type == 'dry-run'
@@ -150,15 +158,25 @@ runs:
         echo "Setting build_version to '$build_version' from build_tag '$build_tag'."
         echo "build_version=$build_version" >> "$GITHUB_ENV"
 
+    - name: Set build_ref from current checkout
+      id: set-build-ref
+      shell: bash
+      run: |
+        build_ref="$( git rev-parse HEAD )"
+        echo "build_ref=$build_ref" >> "$GITHUB_ENV"
+
     - name: Set output
       id: set-output
       shell: bash
       run: |
+        echo "build_stamp=$build_stamp" >> "$GITHUB_OUTPUT"
         echo "build_type=$build_type" >> "$GITHUB_OUTPUT"
         echo "build_tag=$build_tag"         >> "$GITHUB_OUTPUT"
         echo "build_version=$build_version"         >> "$GITHUB_OUTPUT"
+        echo "build_ref=$build_ref"         >> "$GITHUB_OUTPUT"
 
+        echo "Set build_stamp='$build_stamp'."
         echo "Set build_type='$build_type'."
         echo "Set build_tag='$build_tag'."
         echo "Set build_version='$build_version'."
-
+        echo "Set build_ref='$build_ref'."
