--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,10 @@
 name: Release
+
 permissions:
-  "contents": "write"
+
+  contents: write
+  id-token: write
+  packages: write
 
 on:
 
@@ -128,6 +132,7 @@ jobs:
             --target "$release_tag" \
             --verify-tag \
             --draft \
+            --generate-notes \
             --title "Release of version '${{ needs.build.outputs.version }}'" \
             dist/*
 
