--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,12 @@ jobs:
 
   release:
 
+    permissions:
+
+      contents: write
+      id-token: write
+      packages: write
+
     runs-on: "ubuntu-latest"
 
     outputs:
